2007-05-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b64

 * New: In Joomla! and Mambo you can now enter which userlevel
        is allowed to create rootalbums.
        Uninstall/install of component required.

 * New: Method canCreateRootAlbum() for joomla/mambo user

 * Change: Revert table name back to '#__gallery'

2007-05-23 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b63

 * Change: Make breadcrumb a divset (instead of table)

2007-05-07 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b62

 * Fix: full parameter was recognized in microthumb nav in photo view.
   Thanks to Kai.

2007-05-03 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b61

 * Fix: Little Typo

 * Change: use @ before mkdir in platform/*

2007-05-02 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b60

 * "Fix": Lots of phpdoc adds, indenting and gTranslate() 

2007-05-02 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b59

 * Change: Use <label> for labels before/after input files.
	   Added css.
	   Done in gInput()

2007-04-25 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b58

 * New: Navigation via cursor keys. niiiice.

2007-04-19 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b57

 * Fix: Show correct (and nice) tooltip for subalbums in thumbsview.

   Thanks to dimo from forums.

2007-04-11 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b56

 * Fix: Trim title on save in edit_appearance

2007-04-10 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b55

 * Fix: Quotes in album title broke subalbumtree

 * Change: Unified adminbar links.

 Thanks to AndrewVasilyev from forums for reporting this

 * Temp fix: Removed KOI8-R from supported charsets for htmlentities.

2007-03-22 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b54

 * Fix: Htmlfix in b53 broke image area links.

   Thanks again to Ajuniper.

 * Fix: No empty tooltip if no hovertext is given.

2007-03-21 Jens Tkotz <jens@peino.de> 1.6-RC1-svn-b53

 * Fix: Quotes (single and double) and backslash were not quoted in
        imagemap.

 Thanks to Ajuniper from Forum.

 * Fix: Little HTML fixes in imagemap.
